--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==1.12.0
+fastapi==0.112.2
 uvicorn[standard]==0.30.6
 httpx==0.27.2
 beautifulsoup4==4.12.3
@@ -9,7 +9,7 @@ html5lib==1.1
 markdownify==0.12.1
 python-dotenv==1.0.1
 sentence-transformers==3.0.1
-faiss-cpu==1.8.0.post1
+faiss-cpu==1.12.0
 typesense==0.21.0
 rapidfuzz==3.9.6
 numpy==1.26.4
